--- a/sass/pages/_galeria.scss
+++ b/sass/pages/_galeria.scss
@@ -15,7 +15,9 @@
     grid-gap: 10px;
     background-size: cover;    
     justify-self: center;
-    padding-bottom: 5%;
+    padding-bottom: 3%;
+    margin-left: 10px;
+    margin-right: 10px;
     }
     &__img {
         width: 100%;
@@ -64,10 +66,22 @@
 
 .accordion {
     width: 95%;
+    padding-bottom: 2%;
+    font-size: 1em;
     &-button:not(.collapsed) {
         color: inherit;
-        background: #000405;
         color: #aec3b0;
+        background-image: linear-gradient(146deg, #000405 0%, #000e0e 15%, #022d29 31%, #064558 64%, #01161e 100%);
+        animation: fondoanim 10s infinite;
+        font-size: 1em;
     }    
 }
-
+.accordion-item:first-of-type .accordion-button {
+    font-size: 1em;
+}
+.accordion-item:last-of-type .accordion-button.collapsed {
+    font-size: 1em;
+}
+.accordion-body {
+    font-size: 1.4em;
+}
