--- a/sass/pages/_banda.scss
+++ b/sass/pages/_banda.scss
@@ -4,12 +4,15 @@
     @extend .main__principal--videos;    
     font-style: italic; 
     color: white; 
-    padding: 5%;
+    padding: 3%;
     &--texto {
         color: #aec3b0;
         font-family: 'Montserrat', sans-serif;
         border: 5%; 
-        padding: 20px;    
+        padding: 0.5rem; 
+        display: flex;
+        justify-content: center;  
+        @extend .main__principal--videos;  
     }   
     &--li {
         list-style-type: none;
@@ -19,7 +22,8 @@
         grid-template-rows: 1fr 1fr;
         grid-gap: 3rem;
         background-size: cover;
-        margin-bottom: 3rem;    
+        margin-bottom: 3rem; 
+        padding-left: 0%;
     }     
     &1 {
         grid-column: 1 / 3;
@@ -34,18 +38,31 @@
     &3 {
         grid-column: 2 / 4;
         grid-row: 2 / 3;
-        margin-top: 100px;
+        margin-top: 1.5rem;
         position: relative;
     } 
     &--titulos {
         position: absolute;
+        align-self: flex-end;
         bottom: 0%;
-        color: #aec3b0;
-        background: linear-gradient(rgba(0,0,0,1),  rgba(0,0,0,0.5), rgba(255,255,255,0), rgba(0,0,0,1));
+        color: $secondary;
         width: 100%;
         margin: 0;
-        padding: 10px;
-    }       
+        padding: 2px;
+        font-size: 1.5em;
+        & .p {
+            margin-top: 0;
+            margin-bottom: 0.2rem;
+            font-size: 1.2em;
+        }
+    }    
+    &--nueva {
+        padding-bottom: 1.5rem;    
+    }
+}
+.banda {
+    color: $base;
+    text-shadow: #77a47b;
 }
 .letraColor {
     @extend .main__principal--videos;    
@@ -53,10 +70,25 @@
     display: flex;
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
+    padding-top: 12px;
 }
 .click {
     @extend .main__principal;
     color: white;
-    border-bottom: #77a47b;
+    border: #77a47b;
+    display: block;
+    justify-content: center;
+    font-size: 1.9em;
+    font-family: $font-third;
+}
+.card-title {
+    font-size: 2.5em;
+    color: white;
+    font-family: $font-third;
+}
+.card-text {
+    font-size: 1.8em;
+    color: white;
+    font-family: $font-third;
 }
