--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,7 +7,7 @@
         width: 100%;
     } 
     &--imagen2{
-        width: 80%;
+        width: 65%;
     }
     &--audio {
         display: block;
@@ -20,13 +20,18 @@
     }
     &--texto {
         display: inline-block;
-        width: 50%;
-        padding: 20px;
+        width: auto;
+        padding: 1.5rem;
         font-style: italic;
         font-family: $font-principal;
         color: rgb(241, 237, 231);
+        font-size: 2em;
         & .letraColor {
             color: $primary;
+            font-size: 2.8em;
+        }
+        & .lead {
+            font-size: 2em;
         }
     }    
     &--audio {
@@ -66,11 +71,11 @@ section>h3 {
 }
 .article {
     padding: 5%;
-    width: 50%;
+    width: 60%;
     position: relative;
     @include flex(row, center, center, 0);
     &__ul--li {
         display: inline;
-        padding: 20px;
+        padding: 1.2rem;
     }    
 }
