--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -8,7 +8,7 @@
     padding: 1rem;
     &__titulo {
         color: $secondary;
-        font-size: 280%;
+        font-size: 5em;
         font-family: $font-principal; 
         display: flex; 
         align-items: center; 
@@ -33,9 +33,10 @@
         width: 100%;
         }    
         &--li {
-        padding: 7px;
+        padding: .45rem;
         font-family: 'Montserrat', sans-serif;
         display: inline-block;
+        font-size: 1.7em;
             &:hover {
             background: $base;
             border-radius: 5%;
